--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: ^5.6.0
   firebase_core: ^3.14.0
   firebase_storage: ^12.4.7
+  firebase_app_check: ^0.3.2+9
   flutter:
     sdk: flutter
   freezed_annotation: ^3.0.0
