--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,22 +9,28 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.9
   firebase: ^9.0.3
+  firebase_app_check: ^0.3.2+9
   firebase_auth: ^5.6.0
   firebase_core: ^3.14.0
   firebase_storage: ^12.4.7
-  firebase_app_check: ^0.3.2+9
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  path: ^1.9.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   build_runner: ^2.4.14
+  custom_lint: ^0.7.5
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   freezed: ^3.0.6
   json_serializable: ^6.9.5
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 flutter:
   uses-material-design: true
