--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.6.9
+  dio: ^5.8.0+1
   firebase: ^9.0.3
   firebase_app_check: ^0.3.2+9
   firebase_auth: ^5.6.0
