--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^3.0.0
+  go_router: ^16.0.0
   json_annotation: ^4.9.0
   path: ^1.9.1
   riverpod_annotation: ^2.6.1
