--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^3.0.0
   go_router: ^16.0.0
+  google_fonts: 4.0.4
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   path: ^1.9.1
   riverpod_annotation: ^2.6.1
